--- a/index.html
+++ b/index.html
@@ -14,6 +14,45 @@
         <div class="logo"><img src="images/odin-logo.png" alt="the odin project logo"><span>ODIN</span></div>
         <div class="credit">Photo by <a href="https://unsplash.com/@von_co">Ivana Cajina</a> on <a href="https://unsplash.com/photos/asuyh-_ZX54">Unsplash</a></div>
     </div>
-    <div class="rightside"></div>
+    <div class="rigthside">
+        <div class="top">This form is just cosmetic. Even if you submit nothing will happen, so don't submit.
+            But you can try submitting for fun.
+        </div>
+        <form action="" method="get">
+            <div class="middle">
+                <div class="legend">Let's do this</div>
+                <div class="inputs">
+                    <div class="firstname">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" name="firstName" id="first-name">
+                    </div>
+                    <div class="lastname">
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" name="lastName" id="last-name">
+                    </div>
+                    <div class="email">
+                        <label for="email-input">EMAIL</label>
+                        <input type="email" name="emailInput" id="email-input">
+                    </div>
+                    <div class="phone">
+                        <label for="phone-number">PHONE NUMBER</label>
+                        <input type="tel" name="phoneNumber" id="phone-number">
+                    </div>
+                    <div class="password">
+                        <label for="password-input">PASSWORD</label>
+                        <input type="password" name="passwordInput" id="password-input">
+                    </div>
+                    <div class="confirmpassword">
+                        <label for="password-confirm">CONFIRM PASSWORD</label>
+                        <input type="password" name="passwordConfirm" id="password-confirm">
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                <button type="submit">Create account</button>
+                <span>Already have an account? <a href="#">Log in</a></span>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
