--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
                     </div>
                     <div class="password">
                         <label for="password-input">PASSWORD</label>
-                        <input type="password" name="passwordInput" id="password-input">
+                        <input type="password" name="passwordInput" id="password-input" required>
+                        <span></span>
                     </div>
                     <div class="confirmpassword">
                         <label for="password-confirm">CONFIRM PASSWORD</label>
-                        <input type="password" name="passwordConfirm" id="password-confirm">
+                        <input type="password" name="passwordConfirm" id="password-confirm" required>
                     </div>
                 </div>
             </div>
